--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,26 +94,26 @@
     </nav>
 
     <main>
-        <img src="blood-donation.jpg" alt="Blood Donation" width="400">
+        <img src="blood_donation.avif" alt="Blood Donation" width="400">
         <h1>Welcome to our Blood Donation Service</h1>
         <p>Join our mission to save lives by donating blood.</p>
 
         <div class="blog-links">
             <div class="blog-link">
                 <a href="#https://www.hhs.gov/givingequalsliving/giveblood/why-give#:~:text=If%20you%20donate%20blood%2C%20it,them%20from%20making%20blood%20correctly.">
-                    <img src="../pictures/blog1.jpg" alt="Blog 1">
+                    <img src="blog1.jpg" alt="Blog 1">
                     <p>Why Blood donation is critical?</p>
                 </a>
             </div>
             <div class="blog-link">
                 <a href="https://www.lifeblood.com.au/blood/learn-about-blood/why-donate-blood">
-                    <img src="../pictures/blog2.jpg" alt="Blog 2">
+                    <img src="blog2.jpg" alt="Blog 2">
                     <p>Why Donate Blood?</p>
                 </a>
             </div>
             <div class="blog-link">
                 <a href="https://www.healthline.com/health/benefits-of-donating-blood">
-                    <img src="../pictures/blog3.jpg" alt="Blog 3">
+                    <img src="blog3.jpg" alt="Blog 3">
                     <p>Benefits of Blood Donation</p>
                 </a>
             </div>
