--- a/views/userNotDonorHpage.ejs
+++ b/views/userNotDonorHpage.ejs
@@ -52,7 +52,7 @@
 
                 <ul>
                     <li><a href="/donorSignup?userid=<%= encodeURIComponent(userid) %>"><span class="las la-tint">
-                        <span>Become A Donor!</span>
+                        <span>Become A Donor! To Donate and Request Blood</span>
                     </span></a></li>
                     
                    </ul>
