--- a/views/donorSignup.ejs
+++ b/views/donorSignup.ejs
@@ -21,6 +21,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    padding-top : 90px;
 }
 
 .container {
@@ -98,8 +99,6 @@ button:hover {
         <h2>Donor Signup</h2>
 
         <form action="">
-            
-
             <label for="userid">User ID:</label>
             <input type="text" id="userid" name="userid" value="<%= userid %>" required>
 
