--- a/frontendPages/htmlPages/css/userSignup.css
+++ b/frontendPages/htmlPages/css/userSignup.css
@@ -1,5 +1,3 @@
-/* css/userSignup.css */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
@@ -18,6 +16,7 @@ body {
     max-width: 400px;
     width: 100%;
     text-align: center;
+    position: relative;
 }
 
 h1 {
@@ -59,7 +58,24 @@ input[type="password"]:focus {
     border-color: #550011;
 }
 
-.submitAgrre {
+.input-error {
+    border-color: #e74c3c !important;
+}
+
+.feedback {
+    color: #e74c3c;
+    font-size: 0.9em;
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+
+.server-feedback {
+    color: #e74c3c;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.submitAgree {
     margin-bottom: 15px;
 }
 
