--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="ejsPages/css/userhomepage.css">
     <script>
         const userid = '<%= userid %>';
+        const name = '<%= name %>';
     </script>
     <script type="text/javascript" src="/ejsPages/js/userDonorHomepage.js" defer></script>
 </head>
@@ -27,7 +30,7 @@
         <div class="sidebar-menu">
             <ul>
                 <li>
-                    <a href="/DonorProfile?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/DonorProfile?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-user-circle">
                             <span>Profile</span>
                         </span>
@@ -37,26 +40,16 @@
 
             <ul>
                 <li>
-                    <a href="/DonorProfile?userid=<%= encodeURIComponent(userid) %>" class="active">
+                    <a href="/UserHomePageForDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>" class="active">
                         <span class="material-symbols-outlined">Home</span>
-                         <span>Home</span>
+                        <span>Home</span>
                         </span>
                     </a>
                 </li>
             </ul>
-
             <ul>
                 <li>
-                    <a href="/userDonationUpdate?userid=<%= encodeURIComponent(userid) %>">
-                        <span class="las la-tint">
-                            <span>Blood Duties to Fill</span>
-                        </span></a>
-                </li>
-            </ul>            
-
-            <ul>
-                <li>
-                    <a href="/pendingRequests?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/pendingRequests?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-bell">
                             <span>Blood Calls</span>
                         </span>
@@ -66,7 +59,7 @@
 
             <ul>
                 <li>
-                    <a href="/bloodRequest?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/bloodRequest?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-tint">
                             <span>Donate Blood to Blood Bank</span>
                         </span>
@@ -85,7 +78,7 @@
             </ul>
             <ul id="bloodBankLists" style="display: none;">
                 <li style="margin-left: 55px;">
-                    <a href="/getblood?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/getblood?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-handshake">
                             <span style="font-size: 20px;">From Blood Banks</span>
                         </span>
@@ -95,17 +88,17 @@
 
             <ul id="donorLists" style="display: none;">
                 <li style="margin-left: 55px;">
-                    <a href="/getbloodFromDonor?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/getbloodFromDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-handshake">
                             <span style="font-size: 20px;">From Donors</span>
                         </span>
                     </a>
                 </li>
-            </ul>            
+            </ul>
 
             <ul>
                 <li>
-                    <a href="/yourRequests?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/yourRequests?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-file-medical-alt">
                             <span>Updates of your Request</span>
                         </span>
@@ -115,13 +108,13 @@
 
             <ul>
                 <li>
-                    <a href="/donationHistory?userid=<%= encodeURIComponent(userid) %>">
+                    <a href="/donationHistory?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
                         <span class="las la-file-medical-alt">
                             <span>Donation History</span>
                         </span>
                     </a>
                 </li>
-            </ul>            
+            </ul>
 
         </div>
     </div>
@@ -130,10 +123,11 @@
 
         <header>
             <h2>
-                <button type="button" class="icon-button" onclick="toggleNotifications()">
-                    <span class="material-icons">notifications</span>
-                    <span>Donation Updates</span>
-                </button>
+                <a href="/userDonationUpdate?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
+                    <span class="las la-tint">
+                        <span>Blood Duties to Fill</span>
+                    </span>
+                </a>
             </h2>
             <div class="user-wrapper">
 
@@ -162,7 +156,7 @@
 
                     <p id="noAppointmentMessage" style="display: none;"><i class="las la-exclamation-circle"></i>
                         Currently you have no appointment!<br><a class="donate-link"
-                            href="/bloodRequest?userid=<%= encodeURIComponent(userid) %>"> Donate now!</a>
+                            href="/bloodRequest?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>"> Donate now!</a>
                         </a></p>
                     <p id="pendingMessage" style="display: none;"><i class="las la-exclamation-circle"></i> Plase wait!
                         Your appointment is currently pending! </p>
@@ -256,6 +250,7 @@
                 profileCard.classList.toggle('show');
             }
         </script>
+    </div>
 </body>
 
 </html>
