--- a/views/getBloodFromDonorToDonor.ejs
+++ b/views/getBloodFromDonorToDonor.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="ejsPages/css/getBlood.css">
     <script>
         const userid = '<%= userid %>';
+        const name = '<%= name %>';
     </script>
     <script type="text/javascript" src="/ejsPages/js/getBloodFromDonortoDonor.js" defer></script>
 </head>
