--- a/views/userDonationUpdate.ejs
+++ b/views/userDonationUpdate.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="ejsPages/css/user.css">
     <script>
         const userid = '<%= userid %>';
+        const name = '<%= name %>';
     </script>
     <script type="text/javascript" src="/ejsPages/js/user.js" defer></script>
 </head>
