--- a/frontendPages/ejsPages/css/yourRequests.css
+++ b/frontendPages/ejsPages/css/yourRequests.css
@@ -66,7 +66,7 @@ body, html {
     margin: 0;
 }
 
-.container {
+.container2 {
     display: flex;
     height: 100%;
 }
@@ -501,4 +501,239 @@ body, html {
 
 .card p {
     margin-bottom: 0;
+}
+
+
+
+
+
+
+
+
+
+/*                                   starts                                                */
+
+
+:root {
+
+    --main-color: #550011;
+    --color-dark: #1D2231;
+    --text-grey: #8390A2;
+
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+    font-family: Arial;
+}
+
+.sidebar {
+    width: 345px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    background: var(--main-color);
+    z-index: 100;
+    transition: width 300ms;
+}
+
+.sidebar-brand {
+    height: 90px;
+    padding: 1 rem 0 rem 1 rem 2 rem;
+    color: #fff;
+}
+
+.sidebar-brand span {
+    display: inline-block;
+    padding-right: 1rem;
+
+}
+
+.sidebar-menu {
+    margin-top: 1rem;
+}
+
+.sidebar-menu li {
+    width: 100%;
+    margin-bottom: 1.7rem;
+    padding-left: 2rem;
+}
+
+.sidebar-menu a.active {
+    background: #fff;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    color: var(--main-color);
+    border-radius: 30px 0px 0px 30px;
+}
+
+.sidebar-menu a {
+    display: block;
+    color: #fff;
+    font-size: 1.1 rem;
+}
+
+.sidebar-menu a span:first-child {
+    font-size: 1rem;
+    padding-right: 1 rem;
+}
+
+
+header h2 {
+    color: #222;
+}
+
+header label span {
+    font-size: 1.7rem;
+    padding-left: 1rem;
+}
+
+
+#nav-toggle:checked+.sidebar {
+    width: 70px;
+
+}
+
+#nav:checked {
+    width: 70px;
+
+}
+
+
+#nav-toggle:checked+.sidebar .sidebar-brand #nav-toggle:checked+.sidebar li a {
+    padding-left: 1rem;
+    text-align: center;
+
+}
+
+#nav-toggle:checked+.sidebar li a {
+    padding-left: 0rem;
+
+}
+
+
+
+#nav-toggle:checked+.sidebar .sidebar-brand h2 span:last-child,
+#nav-toggle:checked+.sidebar li a span:last-child {
+    display: none;
+
+}
+
+
+#nav-toggle:checked- .main-content {
+    transition: margin-left 300ms;
+    margin-left: 345px;
+
+}
+
+#nav-toggle:checked- .main-content header {
+    width: calc(100%-70px);
+
+}
+
+
+.main-content {
+    margin-left: 345px;
+}
+
+header {
+    background: #fff;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
+
+    left: 345 px;
+    width: calc(100%-345px);
+    top: 0;
+    z-index: 100;
+    transition: left 300ms;
+
+
+}
+
+#nav-toggle {
+    display: none;
+}
+
+main {
+    margin-top: 85px;
+    padding: 2 rem 1.5 rem;
+    background: #f1f5f9;
+    min-height: calc(100vh - 90px);
+
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: transparent;
+    color: #333;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+    /* Add margin to create a gap */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the Dropdown */
+.dropdown-content a {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Style the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #ddd;
+}
+
+.nav-option {
+    color: #333;
+    padding: 12px 16px;
+    font-size: 18px;
+    text-decoration: none;
+    display: inline-block;
+
+    position: relative;
+    /* Add relative positioning */
+    left: -10px;
+    /* Move it 10 pixels to the left */
+}
+
+.nav-option:hover {
+    color: #550011;
+    /* Text color on hover */
+    text-decoration: underline;
+    /* Add underline on hover */
+}
+
+.container {
+    display: flex;
+    height: 100vh;
 }
