--- a/views/pendingRequests.ejs
+++ b/views/pendingRequests.ejs
@@ -41,12 +41,11 @@
 
       <ul>
         <li>
-          <a
-            href="/UserHomePageForDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
-            <span class="material-symbols-outlined">Home</span>
-            <span>Home</span>
+          <a href="/UserHomePageForDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>">
+            <span class="las material-symbols-outlined">
+                <span>Home</span>
             </span>
-          </a>
+        </a>
         </li>
       </ul>
       <ul>
