--- a/views/userHomePage.ejs
+++ b/views/userHomePage.ejs
@@ -40,9 +40,9 @@
 
             <ul>
                 <li>
-                    <a href="/UserHomePageForDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %> " class="active">
-                        <span class="material-symbols-outlined">Home</span>
-                        <span>Home</span>
+                    <a href="/UserHomePageForDonor?userid=<%= encodeURIComponent(userid) %> &name=<%= encodeURIComponent(name) %>" class="active">
+                        <span class="las material-symbols-outlined">
+                            <span>Home</span>
                         </span>
                     </a>
                 </li>
